--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,26 @@
     <item>Nirvana</item>
     <item>U2</item>
     <item>Green Day</item>
+    <item>Stone Temple Pilots</item>
+    <item>Rage Against the Machine</item>
+    <item>Red Hot Chili Peppers</item>
+    <item>Soundgarden</item>
+    <item>Pearl Jam</item>
+    <item>Weezer</item>
+    <item>Radiohead</item>
 </string-array>
 
 <string-array name="descriptions">
     <item>An English rock band that formed in Liverpool in 1960.</item>
     <item>An American rock band that formed in Washington in 1987.</item>
     <item>An Irish rock band from Dublin that formed in 1976.</item>
-    <item>is an American rock band formed in the East Bay of California in 1987.</item>
+    <item>An American rock band formed in the East Bay of California in 1987.</item>
+    <item>An American rock band formed in San Diego, California in 1989.</item>
+    <item>An American rock band from Los Angeles, California. Formed in 1991.</item>
+    <item>An American rock band formed in Los Angeles in 1982.</item>
+    <item>An American rock band formed in Seattle, Washington, in 1984</item>
+    <item>An American rock band formed in Seattle, Washington, in 1990.</item>
+    <item>An American rock band formed in Los Angeles, California, in 1992.</item>
+    <item>An English rock band formed in Abingdon, Oxfordshire, in 1985.</item>
 </string-array>
 </resources>
